<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        tools:ignore="NotSibling" >

        <ImageView
            android:id="@+id/pokedexIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="21dp"
            android:layout_marginStart="17dp"
            android:src="@drawable/ic_pokeball"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pokedexTitle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/searchBar"
            app:layout_constraintStart_toStartOf="@id/pokedexIcon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="17dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bar_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokedexTitle" >

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="13dp"
                android:src="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:duplicateParentState="true" />

            <ImageView
                android:id="@+id/exitSearchIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="13dp"
                android:src="@drawable/ic_close"
                app:tint="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                android:duplicateParentState="true" />

            <EditText
                android:id="@+id/searchViewQuery"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/search"
                android:textColor="@color/black"
                android:textColorHint="@color/medium_grayscale"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchIcon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/search_bar_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="NotSibling" >

            <ImageView
                android:id="@+id/filterNumber"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/ic_number_filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/filterText"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/ic_text_filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recyclerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        android:background="@drawable/recycler_background"
        android:layout_margin="5dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/card_pokemon"
            android:overScrollMode="never"
            android:layout_centerInParent="true"
            tools:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fadedBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/faded_black"
        android:visibility="gone" >

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterConstraint"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="15dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/recycler_background"
        android:backgroundTint="@color/primary"
        android:visibility="gone"
        tools:visibility="visible" >

        <TextView
            android:id="@+id/FilterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/filterLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filterLayout"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/recycler_background" >

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:buttonTint="@color/primary"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:buttonTint="@color/primary" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/recyclerLayout"
        app:layout_constraintEnd_toEndOf="@id/recyclerLayout"
        app:layout_constraintStart_toStartOf="@id/recyclerLayout"
        app:layout_constraintTop_toTopOf="@id/recyclerLayout"
        tools:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/mainLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/primary"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/loadingText"/>

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/loading_advertisement"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/mainLoading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/tryAgainIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_retry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>